2014-3-14
1.错误处理500的地方加上回滚
2.修改changelog的位置
----------------------------------------------------------------
2014-3-7
1.增加部门名称的查找
----------------------------------------------------------------
1.pager抽离成macro了
----------------------------------------------------------------
1.由于emial没有用到，但是wtforms提交的时候会把空字符串填上，所以就把email给了个初始值了。
----------------------------------------------------------------
1.增加一些图标
2.初始了用户数据
3.加入了wsgi_mod相关的application文件
----------------------------------------------------------------
1.增加flask-admin的登陆和退出
2.增加user,role的查询功能
----------------------------------------------------------------
1. add support for i18n