@@ -4,7 +4,7 @@ from flask.ext.security import current_user
 from wtforms.ext.sqlalchemy.orm import model_form
 
 from . import route
-from ..qingbank.forms import ContactForm, CF
+from ..qingbank.forms import ContactForm
 from ..services import api_contact, api_department, api_user, api_role
 
 bp = Blueprint('security-frontend', __name__, template_folder='templates', static_folder='static', url_prefix='/security')
@@ -18,12 +18,21 @@ def index():
 @route(bp, '/profile/contact', methods=['GET', 'POST'])
 def profile_contact():
     """联系信息"""
-    form = CF(request.form,  obj=current_user.contact[0])
+    if current_user.contact.count() >=1:
+        form = ContactForm(request.form,  obj=current_user.contact[0])
+    else:
+        form = ContactForm(request.form)
     # form.populate_obj(current_user.contact)这是把值 放到model的方法
     
     if form.validate_on_submit():
-        form.populate_obj(current_user.contact[0])
-        api_contact.update(current_user.contact[0])
+        if current_user.contact.count() >= 1:
+            form.populate_obj(current_user.contact.first())
+            api_contact.update(current_user.contact.first())
+        else:
+            contact = api_contact.new()
+            form.populate_obj(contact)
+            contact.user = current_user
+            contact = api_contact.save(contact)
         return redirect(url_for('.profile_contact'))
     return render_template('security/profile_contact.html', form=form)
 
