@@ -11,7 +11,7 @@
 			<div class="form-group">
 				{{field.label(class="control-label col-sm-4")}}
 				<div class="col-sm-8">
-					{% if field.name in ('name', )%}
+					{% if field.name in ()%}
 						{{field(class="form-control", readonly="true")}}
 					{% else %}
 						{{field(class="form-control")}}
