@@ -1,3 +1,7 @@
+2014-03-28
+1.bug-fix:新注册用户总是会让列表失效
+2.bug-nofix:注册成功后重定向位置
+3.增加邮件发送功能，使用gmail或者kinorsi
 2014-3-14
 1.错误处理500的地方加上回滚
 2.修改changelog的位置
